[tool.poetry]
name = "gpu-tools"
version = "0.1.0"
description = "Some GPU-oriented tools"
authors = ["François Weber <f.weber@qwant.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpu_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
scipy = "^1.9.3"
dask-cuda = "^22.12.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
